syntax = "proto3";

package go.micro.srv.GetHouseInfo;

service Example {
    rpc GetHouseInfo (Request) returns (Response) {
    }
}

//web-->srv
message Request {
    //sessionid
    string sessionid = 1;
    //房屋id
    string house_id = 2;
}

//srv-->web
message Response {
    //错误吗
    string errno = 1;
    //错误信息
    string errmsg = 2;
    //房屋信息
    bytes housedata = 3;
    //用户id
    int64 user_id = 4;
}
